# synthy

./: Cargo.toml  README.md
src/: editor.rs  lib.rs  params.rs
